Bug 1556433 - disable shared buffer provider when using direct texture mapping. r=nical, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D34242