gfx/layers/PersistentBufferProvider.cpp
@@ -99,7 +99,10 @@ PersistentBufferProviderShared::Create(gfx::IntSize aSize,
                                        gfx::SurfaceFormat aFormat,
                                        KnowsCompositor* aKnowsCompositor) {
   if (!aKnowsCompositor ||
-      !aKnowsCompositor->GetTextureForwarder()->IPCOpen()) {
+      !aKnowsCompositor->GetTextureForwarder()->IPCOpen() ||
+      // Bug 1556433 - shared buffer provider and direct texture mapping do not
+      // synchronize properly
+      aKnowsCompositor->SupportsTextureDirectMapping()) {
     return nullptr;
   }
 
